# game.libretro.gambatte

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/gambatte/: CMakeLists.txt  gambatte.txt
game.libretro.gambatte/: addon.xml  addon.xml.in
game.libretro.gambatte/resources/: buttonmap.xml  settings.xml
game.libretro.gambatte/resources/language/English/: strings.po
gameclient.gambatte/: addon.xml
